--- a/Python_capstone_project/crime_data_capstone.ipynb
+++ b/Python_capstone_project/crime_data_capstone.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "4  34.05 -118.26  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
        "4  34.05 -118.26  "
       ]
      },
-     "execution_count": 80,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +786,7 @@
        "Text(0.5, 1.0, 'Distribution_of_Ages_for_Reported_Crime')"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1135,6 +1135,16 @@
     "    - Crime code 450 to 550 are reported the least.\n",
     "\n",
     "    - There are total 148 crime out of 499 reported under crime code 300 to 400"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# closing database connection \n",
+    "conn.close()"
    ]
   },
   {
